using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Value 
{
    public const string CURRENT_ANIM_VELOCITY = "Velocity";
    public const string CURRENT_ANIM_FALL = "Fall";
    public const float BOT_MIN_SPACE_TO_TOUCH_BRICK = 0.06f * 0.06f;
    public const string BRICK = "Brick";
    public const string PLAYER = "Player";
    public const string BRIDGE = "Bridge";
    public const string BLUE_BRICK = "BlueBrick";
    public const string RED_BRICK = "RedBrick";
    public const string GREEN_BRICK = "GreenBrick";
    public const string WIN_POS = "WinPos";
    public const string DANCE_ANIM = "Dance";
    public const string FALL_ANIM = "Fall";
    public const string FIRST_FLOOR = "Floor1";
    public const string SECOND_FLOOR = "Floor2";
    public const string THIRD_FLOOR = "Floor3";
    public const float VALUE_TIME_OF_FALL_ANIM = 4.85f;
}
